# harness-kit

./: .devlaunch.yml  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  SECURITY.md  biome.json  checksums.sha256  design-lock.json  harness.yaml  harness.yaml.example  install.sh  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: launch.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/autogenerated/: acknowledge_drift.toml  acknowledge_drift_item.toml  add_to_parity_baseline.toml  agent_server_check_installed.toml  agent_server_install.toml  agent_server_restart.toml  agent_server_start.toml  ai_stream_chat.toml  apply_security_preset.toml  board_server_check_installed.toml  board_server_install.toml  board_server_restart.toml  board_server_start.toml  cancel_ai_stream.toml  chat_leave_room.toml  chat_list_rooms.toml  chat_load_messages.toml  chat_local_relay_running.toml  chat_purge_room.toml  chat_save_messages.toml  chat_save_room.toml  chat_start_local_relay.toml  chat_stop_local_relay.toml  check_gh_auth.toml  check_git_repo.toml  check_ollama_running.toml  check_plugin_updates.toml  clear_audit_entries.toml  compute_live_stats.toml  create_ai_session.toml  create_config_file.toml  create_evaluation_session.toml  create_terminal.toml  create_worktrees.toml  delete_ai_session.toml  delete_comparison.toml  delete_custom_profile.toml  delete_keychain_secret.toml  delete_pairwise_vote.toml  destroy_terminal.toml  (+107 more)
apps/desktop/src-tauri/src/: agent_server.rs  board_server.rs  db.rs  lib.rs  membrain_commands.rs  relay_server.rs
apps/desktop/src-tauri/src/ai/: client.rs  commands.rs  types.rs
apps/desktop/src-tauri/src/commands/: agents.rs  chat.rs  claude_md.rs  comparator.rs  comparator_db.rs  comparator_panels.rs  evaluation.rs  export.rs  feedback.rs  fs_scope.rs  git.rs  harness_file.rs  harnesses.rs  history.rs  hooks.rs  mcp.rs  mod.rs  observatory.rs  pairwise.rs  parity.rs  plugin_explorer.rs  plugins.rs  profiles.rs  relay.rs  security.rs  security_db.rs  settings.rs  sync.rs  terminal.rs  types.rs
apps/desktop/src-tauri/src/parity/: known_features.json
docs/: FAQ.md  claude-md-conventions.md  plugins-vs-skills.md
(+749 files in other folders)
