[package]
name = "harness-kit-desktop"
version = "0.1.0"
description = "Harness Kit Desktop App"
authors = []
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"
default-run = "harness-kit-desktop"

[lib]
name = "harness_kit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
walkdir = "2"
zip = { version = "8.5", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "macros", "net", "rt-multi-thread", "time", "process"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "stream"] }
url = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
rand = "0.9"
portable-pty = "0.9"

[dev-dependencies]
tempfile = "3"
